# VulkanTemplate

./: CMakeLists.txt  CMakePresets.json  README.md
src/: main.cpp
src/shaders/: vertexShader.vert
